--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,48 +8,41 @@
         android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    
+
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".InitActivity"
-            android:label="@string/app_name"
-            android:theme="@style/style_grayBg" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".PasswordActivity"
             android:label="Login"
-            android:theme="@style/style_grayBg"
             android:windowSoftInputMode="stateVisible|adjustResize"  >
         </activity>
         <activity
             android:name=".SetPasswordActivity"
             android:label="SetPassword"
-            android:theme="@style/style_grayBg"
             android:windowSoftInputMode="stateVisible|adjustResize" >
         </activity>
         <activity
             android:name=".ContentActivity"
-            android:label="@string/app_name"
-            android:theme="@style/style_grayBg" >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".AddItemActivity"
             android:label="AddItem"
-            android:theme="@style/style_grayBg"
             android:windowSoftInputMode="stateVisible|adjustResize" >
         </activity>
         <activity
             android:name=".ItemDetailActivity"
-            android:label="Detail"
-            android:theme="@style/style_grayBg" >
+            android:label="Detail" >
         </activity>
         </application>
 
