--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,49 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.niulei.Password"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.niulei.password"
+          android:versionCode="1"
+          android:versionName="1.0">
+
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="19"
+        android:targetSdkVersion="23"/>
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".InitActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.InitActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".PasswordActivity"
+            android:name=".activity.LoginActivity"
             android:label="Login"
-            android:windowSoftInputMode="stateVisible|adjustResize"  >
+            android:windowSoftInputMode="stateVisible|adjustResize">
         </activity>
         <activity
-            android:name=".SetPasswordActivity"
+            android:name=".activity.SetPasswordActivity"
             android:label="SetPassword"
-            android:windowSoftInputMode="stateVisible|adjustResize" >
+            android:windowSoftInputMode="stateVisible|adjustResize">
         </activity>
         <activity
-            android:name=".ContentActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.ContentActivity"
+            android:label="@string/app_name">
         </activity>
         <activity
-            android:name=".AddItemActivity"
+            android:name=".activity.AddItemActivity"
             android:label="AddItem"
-            android:windowSoftInputMode="stateVisible|adjustResize" >
+            android:windowSoftInputMode="stateVisible|adjustResize">
         </activity>
         <activity
-            android:name=".ItemDetailActivity"
-            android:label="Detail" >
+            android:name=".activity.ItemDetailActivity"
+            android:label="Detail">
         </activity>
-        </application>
+        <activity
+            android:name=".activity.RecyclerContentActivity"
+            android:label="Content">
+        </activity>
+    </application>
 
 </manifest>
